# state-pattern

./: .gitignore  CMakeLists.txt  README.md  helper.hpp  state.cxx  state.hpp
cmake/: FindGoogletest.cmake
